user-management-rollout/resources/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: user-management-rollout
  labels:
    istio-injection: enabled
